--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="active_notification_count_zero">No active notification</string>
     <string name="title_activity_notification_listener_test">NotificationListenerTestActivity</string>
     <string name="title_activity_aes_test">AesTestActivity</string>
+    <string name="title_activity_fastjson_test">FastjsonTestActivity</string>
 </resources>
