--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_notification_listener_test">NotificationListenerTestActivity</string>
     <string name="title_activity_aes_test">AesTestActivity</string>
     <string name="title_activity_fastjson_test">FastjsonTestActivity</string>
+    <string name="title_activity_handler_thread_test">HandlerThreadTestActivity</string>
 </resources>
