--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_fastjson_test">FastjsonTestActivity</string>
     <string name="title_activity_handler_thread_test">HandlerThreadTestActivity</string>
     <string name="title_activity_intent_service_test">IntentServiceTestActivity</string>
+    <string name="title_activity_ok_http_test">OkHttpTestActivity</string>
 </resources>
