add asynctask demo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_handler_thread_test">HandlerThreadTestActivity</string>
     <string name="title_activity_intent_service_test">IntentServiceTestActivity</string>
     <string name="title_activity_ok_http_test">OkHttpTestActivity</string>
+    <string name="title_activity_async_task_test">AsyncTaskTestActivity</string>
 </resources>
