--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,27 @@
     <string name="title_activity_intent_service_test">IntentServiceTestActivity</string>
     <string name="title_activity_ok_http_test">OkHttpTestActivity</string>
     <string name="title_activity_async_task_test">AsyncTaskTestActivity</string>
+    <string name="ble_not_supported">BLE is not supported</string>
+    <string name="label_data">Data:</string>
+    <string name="label_device_address">Device address:</string>
+    <string name="label_state">State:</string>
+    <string name="no_data">No data</string>
+    <string name="connected">Connected</string>
+    <string name="disconnected">Disconnected</string>
+    <string name="title_devices">BLE Device Scan</string>
+    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
+
+    <string name="unknown_device">Unknown device</string>
+    <string name="unknown_characteristic">Unknown characteristic</string>
+    <string name="unknown_service">Unknown service</string>
+    <string name="menu_connect">Connect</string>
+    <string name="menu_disconnect">Disconnect</string>
+    <string name="menu_scan">Scan</string>
+    <string name="menu_stop">Stop</string>
+    <string name="read_manufacturer_name">Read Manufacturer Name</string>
+    <string name="read_serial_number">Read Serial Number</string>
+    <string name="write_alert_level">Write Alert Level</string>
+    <string name="action_scan">SCAN</string>
+    <string name="action_stop">STOP</string>
+    <string name="bt_unavailable">Bluetooth unavailable</string>
 </resources>
