--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="action_scan">SCAN</string>
     <string name="action_stop">STOP</string>
     <string name="bt_unavailable">Bluetooth unavailable</string>
+    <string name="title_activity_volley_test">VolleyTestActivity</string>
 </resources>
