--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="action_stop">STOP</string>
     <string name="bt_unavailable">Bluetooth unavailable</string>
     <string name="title_activity_volley_test">VolleyTestActivity</string>
+    <string name="title_activity_event_bus_test">EventBusTestActivity</string>
 </resources>
