--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="bt_unavailable">Bluetooth unavailable</string>
     <string name="title_activity_volley_test">VolleyTestActivity</string>
     <string name="title_activity_event_bus_test">EventBusTestActivity</string>
+    <string name="title_activity_smart_image_test">SmartImageTestActivity</string>
 </resources>
