--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,20 @@
         <item>经典</item>
         <item>动作</item>
     </array>
+
+    <string name="title">LiteLab:Async</string>
+    <string name="sub_title">Result in The Log </string>
+
+    <string-array name="async_test_list">
+        <item>AsyncTask Execute</item>
+        <item>AsyncTask Exe Runnable</item>
+        <item>Simple Task</item>
+        <item>Safe Task</item>
+        <item>Task Cancel</item>
+        <item>Ordered Task Executor</item>
+        <item>CyclicBarrier Task Executor</item>
+        <item>Delayed Task</item>
+        <item>Timer Task</item>
+        <item>Cached Task:Reduce Pressure of Server</item>
+    </string-array>
 </resources>
