--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
         <item>Cached Task:Reduce Pressure of Server</item>
     </string-array>
     <string name="title_activity_ble_test">BleTestActivity</string>
+    <string name="title_activity_messenger">MessengerActivity</string>
 </resources>
