--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,15 @@
     </string-array>
     <string name="title_activity_ble_test">BleTestActivity</string>
     <string name="title_activity_messenger">MessengerActivity</string>
+    <string name="title_activity_drawer_layout">DrawerLayoutActivity</string>
+    <string-array name="planets_array">
+        <item>Mercury</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+        <item>Jupiter</item>
+        <item>Saturn</item>
+        <item>Uranus</item>
+        <item>Neptune</item>
+    </string-array>
 </resources>
