--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@
         <item>Neptune</item>
     </string-array>
     <string name="title_activity_custom_view">CustomView</string>
+    <string name="title_activity_animation_test">AnimationTestActivity</string>
 </resources>
