--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@
     </string-array>
     <string name="title_activity_custom_view">CustomView</string>
     <string name="title_activity_animation_test">AnimationTestActivity</string>
+    <string name="title_activity_sound_player">SoundPlayerActivity</string>
 </resources>
