--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,6 +135,7 @@
     <string name="radarchart_title3">title3</string>
     <string name="radarchart_title4">title4</string>
     <string name="radarchart_title5">title5</string>
+    <string name="title_activity_aidltest">AIDLTestActivity</string>
 
 
 </resources>
