添加下拉刷新和上拉刷新

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,6 +136,6 @@
     <string name="radarchart_title4">title4</string>
     <string name="radarchart_title5">title5</string>
     <string name="title_activity_aidltest">AIDLTestActivity</string>
-
+    <string name="loading">加载中...</string>
 
 </resources>
