--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,4 +146,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="title_activity_view_drag_helper">ViewDragHelperActivity</string>
+    <string name="title_activity_view_pager_tset">ViewPagerTsetActivity</string>
 </resources>
